--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li>07/2024: One paper has been accepted in VIS'24.</li>
           <li>06/2024: Two papers have been accepted in SC'24. Congratulations to Xuan on getting her first SC paper accepted!</li>
           <li>03/2024: One paper has been accepted in EuroVis'24.</li>
-          <li>01/2024: One paper has been accepted in IPDPS'24.</li>
+<!--           <li>01/2024: One paper has been accepted in IPDPS'24.</li>
           <li>12/2023: One paper has been accepted in ICDE'24. Congratulations to Mingze!</li>
           <li>11/2023: Dr. Liang has been recommended as EPSCoR Research Fellows for our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2327266&HistoricalAwards=false">RII Track-4 project</a> awarded by the National Science Foundation (my role: PI). This project aims to improve the performance of MPI on exascale systems with adaptive lossy compression methods. Thanks a lot to the NSF!</li>
           <li>11/2023: One paper has been accepted in SIGMOD'24.</li>
@@ -134,7 +134,7 @@
           <li>05/2022: One paper has been accepted in SSDBM'22.</li>
           <li>04/2022: One paper has been accepted in HPDC'22.</li>
           <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2330367">CRII project</a> has been awarded by the National Science Foundation (my role: PI). This project aims to enable the preservation of quantities of interest in scientific lossy compressors. Thanks a lot to the NSF!</li>
-          <li>01/2022: Pu Jiao joined our team as a PhD student. Welcome Pu!</li>
+          <li>01/2022: Pu Jiao joined our team as a PhD student. Welcome Pu!</li> -->
 <!-- 
           <li>11/2021: One paper has been accepted in ICDE'22.</li>
           <li>11/2021: I am serving as a Guest Editor of the special issue <a href="https://www.mdpi.com/journal/electronics/special_issues/new_trends_HPC">"New Trends for High-Performance Computing"</a> in <a href="https://www.mdpi.com/journal/electronics">Electronics</a>. Please consider making a submission!</li>
@@ -186,6 +186,19 @@
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
 
         <p><I>My students are underlined.</I></p>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPS'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Pu Jiao</u>, Sheng Di, <u>Jiannan Tian</u>, <u>Mingze Xia</u>, <u>Xuan Wu</u>, Yang Zhang, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
+              Mitigating Artifacts in Pre-quantization Based Scientific Data Compressors with Quantization-aware Interpolation.<br>
+              <I>Proceedings of the 40th IEEE International Parallel & Distributed Processing Symposium, New Orlean, LA, May 25 - May 29, 2026.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
 
         <div class="row">
           <div class="col-md-2">
