--- a/research.html
+++ b/research.html
@@ -209,6 +209,45 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>IPDPS'26</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Pu Jiao</u>, Sheng Di, <u>Jiannan Tian</u>, <u>Mingze Xia</u>, <u>Xuan Wu</u>, Yang Zhang, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
+              Mitigating Artifacts in Pre-quantization Based Scientific Data Compressors with Quantization-aware Interpolation.<br>
+              <I>Proceedings of the 40th IEEE International Parallel & Distributed Processing Symposium, New Orleans, LA, May 25 - May 29, 2026.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPS'26</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Yuxiao Li, <u>Mingze Xia</u>, <b>Xin Liang</b>, Bei Wang, Robert Underwood, Sheng Di, Hemant Sharma, Dishant Beniwal, Franck Cappello, Hanqi Guo.<br>
+              pMSz: A Distributed Parallel Algorithm for Correcting Morse-Smale Segmentations for Lossy Compression.<br>
+              <I>Proceedings of the 40th IEEE International Parallel & Distributed Processing Symposium, New Orleans, LA, May 25 - May 29, 2026.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>VIS'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Nathaniel Gorski, <b>Xin Liang</b>, Hanqi Guo, Bei Wang.<br>
+              FZ: Topology-Preserving Compression of 2D Symmetric and Asymmetric Second-Order Tensor Fields.<br>
+              <I>Proceedings of the 2025 IEEE VIS Conference, Vienna, Austria, Nov 2 - 7, 2025.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>SC'25</h6>
           </div>
           <div class="col-md-10">
